objects/Lead_Eligible_Dealers__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lead Eligible Dealers</relationshipLabel>
        <relationshipName>Lead_Eligible_Dealers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance (Miles)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Dealer_Assignment_Audit__c</fullName>
        <label>Lead Dealer Assignment Audit</label>
        <referenceTo>Lead_Dealer_Assignment_Audit__c</referenceTo>
        <relationshipLabel>Lead Eligible Dealers</relationshipLabel>
        <relationshipName>Lead_Eligible_Dealers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Dealer Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead Eligible Dealers</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Eligible Dealers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>